--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 LDFLAGS=-lm -Wl,-z,now -Wl,-z,relro
 CC = /opt/codesourcery/bin/arm-linux-gcc -g -Wall -fPIC -O2 -rdynamic
 STRIP = /opt/codesourcery/bin/arm-linux-strip
-CFLAGS = -I../ -I/opt/codesourcery/arm-none-linux-gnueabi/libc/usr/include -I/home/merge/Asterisk-13/../Share/external/GXV317X/include
+CFLAGS = -I../ -I/home/merge/Asterisk-13/../Share/external/GXV317X/include
 CFLAGS += -fPIE -fstack-protector-all -D_FORTIFY_SOURCE=1
-LIBS = -L/opt/codesourcery/arm-none-linux-gnueabi/libc/usr/lib -L/home/merge/Asterisk-13/../Share/external/GXV317X/lib -lcurl -ljansson
+LIBS = -L/home/merge/Asterisk-13/../Share/external/GXV317X/lib -ljansson -lpthread
 PROGRAM = mcm-demo
 
 BASIC_OBJS = avs_controller.o
